--- a/pom.xml
+++ b/pom.xml
@@ -6,7 +6,7 @@
     <packaging>war</packaging>
     <version>1.0</version>
     <name>InsultApp</name>
-  
+
     <properties>
         <project.build.sourceEncoding>UTF-8</project.build.sourceEncoding>
         <maven.compiler.source>1.8</maven.compiler.source>
@@ -49,5 +49,12 @@
       </build>
     </profile>
   </profiles>
+  <dependencies>
+    <dependency>
+      <groupId>org.postgresql</groupId>
+      <artifactId>postgresql</artifactId>
+      <version>9.4-1200-jdbc41</version>
+    </dependency>
+  </dependencies>
 	<artifactId>InsultApp</artifactId>
 </project>
